--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my web portiofolio</title>
+    <link rel="stylesheet" href="asad.css">
+    <link rel="shortcut icon" href="my-web-2/logo/images (1).jpg" type="image/x-icon">
+    <style>
+        h1.{
+            background-color: blue;
+        }
+    </style>
 </head>
+
 <body>
     <h1>Bangladesh is a land of river</h1>
+    <h2></h2>
 </body>
 </html>
