--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <link rel="stylesheet" href="asad.css">
     <link rel="shortcut icon" href="my-web-2/logo/images (1).jpg" type="image/x-icon">
     <style>
-        h1.{
-            background-color: blue;
-        }
     </style>
 </head>
 
 <body>
     <h1>Bangladesh is a land of river</h1>
-    <h2></h2>
+    <h2git >bangladesh</h2>
 </body>
 </html>
