--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <h1>Bangladesh is a land of river</h1>
-    <h2git >bangladesh</h2>
+    <h2>bangladeshgit </h2>
+    <h1>Bangladesh is a land of river . amr shoner bangla ami tumi valo bashe . amr shober bangla ami tumi vlo bashe amr shober bangla ami tumi valo bashe </h1>
 </body>
 </html>
