this is my frist commit

--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my web portiofolio</title>
+    <title>This is a practise</title>
     <link rel="stylesheet" href="asad.css">
-    <link rel="shortcut icon" href="my-web-2/logo/images (1).jpg" type="image/x-icon">
-    <style>
-    </style>
 </head>
-
 <body>
-    <h1>Bangladesh is a land of river</h1>
-    <h2>bangladeshgit </h2>
-    <h1>Bangladesh is a land of river . amr shoner bangla ami tumi valo bashe . amr shober bangla ami tumi vlo bashe amr shober bangla ami tumi valo bashe </h1>
+    <div class="city">
+     <h2>London</h2>
+     <p>London is the capital of England</p>
+    </div>
+
+    <div class="city">
+       <h2>Paris</h2>
+       <p>Paris is the capital of France</p>
+    </div>
+
+    <div class="city">
+     <h2>Tokyo</h2>
+     <p>Tokyo is the cpaital of Japan</p>
+    </div>
+
+
+
 </body>
 </html>
