--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is a practise</title>
+    <title>git --version</title>
+    <link rel="shortcut icon" href="logo/images (1).jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="asad.css">
-</head>
+</0head>
 <body>
-    <div class="city">
-     <h2>London</h2>
-     <p>London is the capital of England</p>
+    <div class="Bangladesh">
+        <div class="row">
+            <div class="col-md-4">Bangladesh is a land of river</div>
+            <div class="col-md-4">Bangladesh is a land of river</div>
+            <div class="col-md-4">Bangladesh is land of river</div>
+            <h5>Asad </h5>
+            <h2>Asad</h2>
+            <h1>Asad</h1>
+            <h3>Bangladesh is a land of river.</h3>
+            <h4>Bangladesh is a land of river.</h4>
+            <h6>Bangladesh is a land rievr</h6>
+        </div>
     </div>
-
-    <div class="city">
-       <h2>Paris</h2>
-       <p>Paris is the capital of France</p>
-    </div>
-
-    <div class="city">
-     <h2>Tokyo</h2>
-     <p>Tokyo is the cpaital of Japan</p>
-    </div>
-
-
-
 </body>
 </html>
