--- a/index.html
+++ b/index.html
@@ -10,21 +10,58 @@
     <link rel="stylesheet" href="asad.css">
 </head>
 <body>
- <section>
+ <section class="top-banner">
 <div class="half-width">
     <h1>Welcome to </h1>
-    <h1><span class="name-highlight">Asad</span> Web Site</h1>
+    <h1><span class="orange-highlight">Asad</span> Web Site</h1>
     <h3>World class Web developer</h3>
     <p>You might show me jumping,Climbing buildings, and stopping trains.But 
     nobody pays me a dime for that work. That`s why i am learning and 
     mastering web developement. I will not stop until become the web 
     developement Hero.</p>
+    <a class="link-button" target="_blank" href="www.freefire.com">HIRE ME</a>
 </div>
 <div class="half-width">
  <img src="web-portfolio/my-bg.png" alt="">
 </div>
-
-
  </section>
+
+
+ <section class="dream-area">
+    <div class="half-width">
+        <img src="web-portfolio/my1.png" alt="my second photo">
+    </div>
+
+<div class="half-width">
+        <h2>Big Dream</h2>
+        <h3>Become World's No.1 Developer </h3>
+        <p>I already learned the basic HTML and CSS.I can build my simple website.I can even teach my grandma how to make simple website.My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-button" target="_blank" href="www.facebook.com/ASAD AL ISLAM">DOWNLOAD RESUM</a>
+</div>
+ </section>
+
+
+ <section class="experiance-area">
+    <h2>Experiance</h2>
+    <div id="full-stack" class="half-width single-experience">
+        <h2 > Full Stack web Developer</h2>
+        <h3 class="orange-highlight">2025  - present | Pro level Web Developer </h3>
+        <p>Iam the master of HTML,CSS and JAVA SCRIPT.I know everything needed to make a website function,efficient.I don't stop with the web.I went beyond with most popular javascript framework called vue Js.I even know the deployment,server and security. I will give you 100% web solution.</p>
+    </div>
+    <div id="baby-web" class="half-width single-experience">
+        <h2>Baby Web Developer</h2>
+        <h3 class="orange-highlight">2023-2024 | Programming Hero learner</h3>
+        <p>They didn't offer me a job.But I made myself as a remove web Developer.I made their website and showed it to them. They liked it.And uploaded the content.It was fun working at programming Hero.</p>
+    </div>
+ </section>
+
+ <footer>
+<p>@ 2024 Black-Hole company .. .. asad</p>
+ </footer>
+
+
+
+
+
 </body>
 </html>
