--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 <div class="half-width">
         <h2>Big Dream</h2>
         <h3>Become World's No.1 Developer </h3>
-        <p>I already learned the basic HTML and CSS.I can build my simple website.I can even teach my grandma how to make simple website.My goal is to build 3 websites and learn advanced topics.</p>
+        <p>I already learned the basic HTML and CSS.I can build my simple website.I can even teach my grandma how to make simple website.<br>
+        My goal is to build 3 websites<br>
+        and learn advanced topics.</p>
         <a class="link-button" target="_blank" href="www.facebook.com/ASAD AL ISLAM">DOWNLOAD RESUM</a>
 </div>
  </section>
